--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,7 @@
+#customization 自定义
+otherMod
+.idea
+
 logs/
 /core/assets/mindustry-saves/
 /core/assets/mindustry-maps/
@@ -45,6 +49,7 @@ version.properties
 *.ear
 hs_err_pid*
 crash-report-*
+replay_pid*
 
 ## Robovm
 /ios/robovm-build/
